docs(integration): add content navigation

--- a/packages/tools/docusaurus/docs/integration/index.mdx
+++ b/packages/tools/docusaurus/docs/integration/index.mdx
@@ -53,3 +53,150 @@ import { Columns } from '@bedrock-layout/primitives';
     />
   </Columns>
 </div>
+
+## Storybook
+
+<div ks-theme="docs">
+  <Columns columns={3} gutter="md" switchAt="48rem">
+    <TeaserBox
+      topic="JSON Schema"
+      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      link={{
+        href: './storybook/schema',
+        label: 'TODO',
+        variant: 'clear',
+        size: 'small',
+        iconAnimation: true,
+        iconAfter: {
+          icon: 'chevron-right',
+        },
+      }}
+    />
+    <TeaserBox
+      topic="Design & Component Token"
+      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      link={{
+        href: './storybook/token',
+        label: 'TODOReact',
+        variant: 'clear',
+        size: 'small',
+        iconAnimation: true,
+        iconAfter: {
+          icon: 'chevron-right',
+        },
+      }}
+    />
+    <TeaserBox
+      topic="Generated Controls"
+      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      link={{
+        href: './storybook/controls',
+        label: 'TODO',
+        variant: 'clear',
+        size: 'small',
+        iconAnimation: true,
+        iconAfter: {
+          icon: 'chevron-right',
+        },
+      }}
+    />
+    <TeaserBox
+      topic="Premade Stories"
+      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      link={{
+        href: './storybook/stories',
+        label: 'TODO',
+        variant: 'clear',
+        size: 'small',
+        iconAnimation: true,
+        iconAfter: {
+          icon: 'chevron-right',
+        },
+      }}
+    />
+    <TeaserBox
+      topic="Theming"
+      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      link={{
+        href: './storybook/theming',
+        label: 'TODO',
+        variant: 'clear',
+        size: 'small',
+        iconAnimation: true,
+        iconAfter: {
+          icon: 'chevron-right',
+        },
+      }}
+    />
+  </Columns>
+</div>
+
+## React
+
+<div ks-theme="docs">
+  <Columns columns={3} gutter="md" switchAt="48rem">
+    <TeaserBox
+      topic="Image Rendering"
+      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      link={{
+        href: './react/image-rendering',
+        label: 'TODO',
+        variant: 'clear',
+        size: 'small',
+        iconAnimation: true,
+        iconAfter: {
+          icon: 'chevron-right',
+        },
+      }}
+    />
+    <TeaserBox
+      topic="Rich Text Rendering"
+      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      link={{
+        href: './storybook/rich-text-rendering',
+        label: 'TODO',
+        variant: 'clear',
+        size: 'small',
+        iconAnimation: true,
+        iconAfter: {
+          icon: 'chevron-right',
+        },
+      }}
+    />
+  </Columns>
+</div>
+
+## Frameworks
+
+<div ks-theme="docs">
+  <Columns columns={3} gutter="md" switchAt="48rem">
+    <TeaserBox
+      topic="Gatsby"
+      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      link={{
+        href: './frameworks/gatsby',
+        label: 'TODO',
+        variant: 'clear',
+        size: 'small',
+        iconAnimation: true,
+        iconAfter: {
+          icon: 'chevron-right',
+        },
+      }}
+    />
+    <TeaserBox
+      topic="Next.js"
+      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      link={{
+        href: './frameworks/nextjs',
+        label: 'TODO',
+        variant: 'clear',
+        size: 'small',
+        iconAnimation: true,
+        iconAfter: {
+          icon: 'chevron-right',
+        },
+      }}
+    />
+  </Columns>
+</div>
