docs(layout): add proper button label

--- a/packages/tools/docusaurus/docs/foundations/layout/index.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/index.mdx
@@ -13,7 +13,7 @@ import { Columns } from '@bedrock-layout/primitives';
       link={{
         size: 'small',
         href: '/docs/foundations/token/branding-token',
-        label: 'Your brand represented',
+        label: 'Go to Sections',
         variant: 'clear',
         iconAnimation: true,
         iconAfter: {
