docs(foundations): create more content

--- a/packages/tools/docusaurus/docs/foundations/index.mdx
+++ b/packages/tools/docusaurus/docs/foundations/index.mdx
@@ -16,10 +16,10 @@ Foundations are the visual elements needed to create your Design System and its 
   <Columns columns={2} gutter="md" switchAt="30rem">
     <TeaserBox
       topic="Token"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="Token are design decisions encoded in your Design System. See, how kickstartDS differentiates between Branding, Design and Component Token."
       link={{
         href: './token/',
-        label: 'Go to Token',
+        label: 'Get into Token',
         variant: 'clear',
         size: 'small',
         iconAnimation: true,
@@ -30,7 +30,7 @@ Foundations are the visual elements needed to create your Design System and its 
     />
     <TeaserBox
       topic="Components"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="Components are the main building blocks for any user interface. Explore how kickstartDS anatomy of components and learn about the Component API. "
       link={{
         href: './components/',
         label: 'Explore Components',
@@ -44,7 +44,7 @@ Foundations are the visual elements needed to create your Design System and its 
     />
     <TeaserBox
       topic="Layout"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="Read who kickstartDS handles layout to present and structure your content susing sections and Bedrock."
       link={{
         href: './layout/',
         label: 'Learn about Layouts',
@@ -58,7 +58,7 @@ Foundations are the visual elements needed to create your Design System and its 
     />
     <TeaserBox
       topic="Modules"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
+      text="kickstartDS is sliced in different component modules which are all built on top of each other. Learn about these modules and its compontents."
       link={{
         href: './modules/',
         label: 'Go to Modules',
@@ -91,36 +91,25 @@ Foundations are the visual elements needed to create your Design System and its 
         level: 'h2',
         pageHeader: false,
         spaceAfter: 'none',
-        styleAs: 'h2',
+        styleAs: 'h1',
         subheadline: 'The perfect addition to our Open Source base',
       },
-      links: [
-        {
-          fillAnimation: false,
-          href: '#',
-          iconAfter: false,
-          iconAnimation: false,
-          iconBefore: false,
-          label: 'Request a guided demo',
-          newTab: false,
-          size: 'medium',
-          variant: 'solid',
-        },
-      ],
-      text:
-        'The **Content Module** includes seven rich components: Hero visual, Quote, Storytelling etc. — everything you need to build beautiful content experiences or to enrich your existing Design System',
+      link: {
+        fillAnimation: false,
+        href: '#',
+        iconAfter: false,
+        iconAnimation: false,
+        iconBefore: false,
+        label: 'Interested? Contact us!',
+        newTab: false,
+        size: 'small',
+        variant: 'solid',
+      },
+      text: 'The **Content Module** includes seven rich components: Hero visual, Quote, Storytelling etc. — everything you need to build beautiful content experiences or to enrich your existing Design System',
       textAlign: 'left',
       vAlign: 'center',
     }}
-    image={{
-      hAlign: 'right',
-      order: {
-        desktopImageLast: true,
-        mobileImageLast: false,
-      },
-      ratio: 'none',
-      source: '',
-      vAlign: 'bottom',
-    }}
   />
 </Section>
+
+TODO: add Zendesk to Button
