--- a/packages/tools/docusaurus/docs/foundations/layout/index.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/index.mdx
@@ -7,6 +7,8 @@ import { Columns } from '@bedrock-layout/primitives';
 
 # Layout
 
+The Layout helps you to generate flexible methods to present and structure your content supporting consistency across your applications.
+
 <div ks-theme="docs">
   <Columns columns={2} gutter="md" switchAt="42rem">
     <TeaserBox
