docs: fix docs production build

--- a/packages/tools/docusaurus/docs/foundations/index.mdx
+++ b/packages/tools/docusaurus/docs/foundations/index.mdx
@@ -13,7 +13,7 @@ import myImageUrl from '../../static/img/content-module.png';
 Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your specifics based on all the best practice defaults given by kickstartDS on token, like color, typography, but also components and layout.
 
 <Section ks-theme="docs" spaceBefore="none" width="full">
-  <Columns columns={2} gutter="md" switchAt="30rem">
+  <Columns columns={2} gutter="md" switchAt={480}>
     <TeaserBox
       topic="Token"
       text="Token are design decisions encoded in your Design System. See, how kickstartDS differentiates between Branding, Design and Component Token."
