--- a/packages/tools/docusaurus/docs/foundations/layout/index.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/index.mdx
@@ -10,7 +10,7 @@ import { Columns } from '@bedrock-layout/primitives';
 The Layout helps you to generate flexible methods to present and structure your content supporting consistency across your applications.
 
 <div ks-theme="docs">
-  <Columns columns={2} gutter="md" switchAt="42rem">
+  <Columns columns={2} gutter="md" switchAt={672}>
     <TeaserBox
       link={{
         size: 'small',
