--- a/packages/tools/docusaurus/docs/foundations/token/index.mdx
+++ b/packages/tools/docusaurus/docs/foundations/token/index.mdx
@@ -20,7 +20,7 @@ import { Columns } from '@bedrock-layout/primitives';
 **kickstartDS** differentiates between Branding, Design and Component Token. Whereas described above Design Token store values e.g. color, typography, spacing, animation, etc., Branding Token are are very small token subset to setup your corporate design in lightspeed. Component Token represent the properties and values that are contained in a component, e.g. container, label text, icons, and states.
 
 <div ks-theme="docs">
-  <Columns columns={3} gutter="md" switchAt="42rem">
+  <Columns columns={3} gutter="md" switchAt={672}>
     <TeaserBox
       link={{
         size: 'small',
