--- a/packages/tools/docusaurus/docs/guides/index.mdx
+++ b/packages/tools/docusaurus/docs/guides/index.mdx
@@ -12,7 +12,7 @@ Guides provide instructions on how to get the most out of kickstartDS to create 
 TODO: add zendesk
 
 <div ks-theme="docs">
-  <Columns columns={3} gutter="md" switchAt="48rem">
+  <Columns columns={3} gutter="md" switchAt={768}>
     <TeaserBox
       topic="Create your Design System"
       text="This is basically the main guide. It explains how you get your first Design System setup in five simple steps"
