--- a/packages/tools/docusaurus/docs/integration/index.mdx
+++ b/packages/tools/docusaurus/docs/integration/index.mdx
@@ -8,7 +8,7 @@ import { Columns } from '@bedrock-layout/primitives';
 # Integration
 
 <div ks-theme="docs">
-  <Columns columns={3} gutter="md" switchAt="48rem">
+  <Columns columns={3} gutter="md" switchAt={768}>
     <TeaserBox
       topic="Storybook"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
@@ -57,7 +57,7 @@ import { Columns } from '@bedrock-layout/primitives';
 ## Storybook
 
 <div ks-theme="docs">
-  <Columns columns={3} gutter="md" switchAt="48rem">
+  <Columns columns={3} gutter="md" switchAt={768}>
     <TeaserBox
       topic="JSON Schema"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
@@ -134,7 +134,7 @@ import { Columns } from '@bedrock-layout/primitives';
 ## React
 
 <div ks-theme="docs">
-  <Columns columns={3} gutter="md" switchAt="48rem">
+  <Columns columns={3} gutter="md" switchAt={768}>
     <TeaserBox
       topic="Image Rendering"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
@@ -169,7 +169,7 @@ import { Columns } from '@bedrock-layout/primitives';
 ## Frameworks
 
 <div ks-theme="docs">
-  <Columns columns={3} gutter="md" switchAt="48rem">
+  <Columns columns={3} gutter="md" switchAt={768}>
     <TeaserBox
       topic="Gatsby"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
