--- a/packages/tools/docusaurus/docs/intro/index.mdx
+++ b/packages/tools/docusaurus/docs/intro/index.mdx
@@ -30,7 +30,7 @@ Many thanks to [Amplifyn](https://www.amplifyn.com) for allowing us to use their
 Get started building your own Design System by installing **kickstartDS** into your project, or by following our [Create your first Design System](https://todo) tutorial, to learn about the main concepts involved.
 
 <div ks-theme="docs">
-  <Columns columns={3} gutter="md" switchAt="42rem">
+  <Columns columns={3} gutter="md" switchAt={672}>
     <TeaserBox
       link={{
         size: 'small',
