--- a/packages/tools/docusaurus/docs/concepts/index.mdx
+++ b/packages/tools/docusaurus/docs/concepts/index.mdx
@@ -10,7 +10,7 @@ import { Columns } from '@bedrock-layout/primitives';
 TODO describe this as coming soon... possibly at outlook at possible pages and integrate with Zendesk voting feature
 
 <div ks-theme="docs">
-  <Columns columns={3} gutter="md" switchAt="48rem">
+  <Columns columns={3} gutter="md" switchAt={768}>
     <TeaserBox
       topic="TODO: Guides Nav"
       text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
