docs(integration): improve content nav

--- a/packages/tools/docusaurus/docs/integration/index.mdx
+++ b/packages/tools/docusaurus/docs/integration/index.mdx
@@ -4,59 +4,29 @@ sidebar_position: 1
 
 import { TeaserBox } from '@kickstartds/base/lib/teaser-box';
 import { Columns } from '@bedrock-layout/primitives';
+import { Button } from '@kickstartds/base/lib/button';
 
 # Integration
-
-<div ks-theme="docs">
-  <Columns columns={3} gutter="md" switchAt={768}>
-    <TeaserBox
-      topic="Storybook"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
-      link={{
-        href: './storybook/',
-        label: 'Go to Token',
-        variant: 'clear',
-        size: 'small',
-        iconAnimation: true,
-        iconAfter: {
-          icon: 'chevron-right',
-        },
-      }}
-    />
-    <TeaserBox
-      topic="React"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
-      link={{
-        href: './react/',
-        label: 'Learn about React',
-        variant: 'clear',
-        size: 'small',
-        iconAnimation: true,
-        iconAfter: {
-          icon: 'chevron-right',
-        },
-      }}
-    />
-    <TeaserBox
-      topic="Frameworks"
-      text="TODO: Foundations are the visual elements needed to create your Design System and its engaging user experiences. You can build up your."
-      link={{
-        href: './frameworks/',
-        label: 'Explore Frameworks',
-        variant: 'clear',
-        size: 'small',
-        iconAnimation: true,
-        iconAfter: {
-          icon: 'chevron-right',
-        },
-      }}
-    />
-  </Columns>
-</div>
 
 ## Storybook
 
 <div ks-theme="docs">
+
+TODO: Foundations are the visual elements needed to create your Design System
+and its engaging user experiences. You can build up your."
+
+<Button
+  size="small"
+  variant="clear"
+  label="Storybook"
+  href="./storybook"
+  iconAfter={{
+    icon: 'chevron-right',
+  }}
+/>
+
+<br />
+
   <Columns columns={3} gutter="md" switchAt={768}>
     <TeaserBox
       topic="JSON Schema"
@@ -134,6 +104,21 @@ import { Columns } from '@bedrock-layout/primitives';
 ## React
 
 <div ks-theme="docs">
+
+TODO: Foundations are the visual elements needed to create your Design System
+and its engaging user experiences. You can build up your."
+
+<Button
+  size="small"
+  variant="clear"
+  label="React"
+  href="./react"
+  iconAfter={{
+    icon: 'chevron-right',
+  }}
+/>
+
+<br />
   <Columns columns={3} gutter="md" switchAt={768}>
     <TeaserBox
       topic="Image Rendering"
@@ -167,6 +152,21 @@ import { Columns } from '@bedrock-layout/primitives';
 </div>
 
 ## Frameworks
+
+TODO: Foundations are the visual elements needed to create your Design System
+and its engaging user experiences. You can build up your."
+
+<Button
+  size="small"
+  variant="clear"
+  label="Frameworks"
+  href="./frameworks"
+  iconAfter={{
+    icon: 'chevron-right',
+  }}
+/>
+
+<br />
 
 <div ks-theme="docs">
   <Columns columns={3} gutter="md" switchAt={768}>
