--- a/packages/tools/docusaurus/docs/foundations/token/design-token/color.mdx
+++ b/packages/tools/docusaurus/docs/foundations/token/design-token/color.mdx
@@ -504,5 +504,5 @@ See the following `Page` in our `Figma` tokens file for a visual representation:
   width="800"
   height="450"
   src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FH7F4P2fsDgEkIcc7U1alk1%2FkickstartDS-Design-Tokens%3Fnode-id%3D1%253A3"
-  allowfullscreen
+  allowFullScreen
 ></iframe>
