--- a/packages/tools/docusaurus/docs/intro/index.mdx
+++ b/packages/tools/docusaurus/docs/intro/index.mdx
@@ -18,9 +18,9 @@ Check out the following video for a more in-depth demonstration, and see kicksta
   height="280"
   src="https://www.youtube.com/embed/54_xZYjWzWE?start=3685"
   title="YouTube video player"
-  frameborder="0"
+  frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowFullScreen
 ></iframe>
 
 Many thanks to [Amplifyn](https://www.amplifyn.com) for allowing us to use their recording.
@@ -163,7 +163,7 @@ We currently support integrating with Figma through our official Design Token li
   width="800"
   height="450"
   src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FH7F4P2fsDgEkIcc7U1alk1%2FkickstartDS-Design-token%3Fnode-id%3D0%253A1"
-  allowfullscreen
+  allowFullScreen
 ></iframe>
 
 The template includes all our Token categories (colors, spacings, typography, borders, durations, opacities and shadows), and for all of those Token categories there are pre-defined base scales and semantic Token based on those base scales. All ready to use, but customizable by just re-defining relationships.
