--- a/packages/tools/docusaurus/docs/guides/create/start.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/start.mdx
@@ -28,7 +28,7 @@ $ git init
 ```
 
 <Admonition type="tip" title="Working with the terminal">
-  If any of the commands related to `git` or `npm` / `node` fail for you, or you need help working with the terminal, have a look at our `Getting Started` [page about Environment configuration](../../intro/environment/index.md).
+  If any of the commands related to `git` or `npm` / `node` fail for you, or you need help working with the terminal, have a look at our `Getting Started` [page about Environment configuration](../../intro/environment.md).
 
 Additionally you might not use `nvm` for `Node` version management. Just skip those sections, and ensure the correct version for your project is installed and active!
 
@@ -114,7 +114,7 @@ For example: you might already have `React` installed in your project, so you wo
 
 <Admonition type="tip" title="`npm` vs `yarn` vs ...">
   In this guide we'll be using `yarn` as our package manager of choice. Feel free to use your preferred solution instead.<br/>
-  For more details see our [page about Environment configuration](../../intro/environment/index.md).
+  For more details see our [page about Environment configuration](../../intro/environment.md).
 
 _For example_: if you were using `npm`, and you'd encounter the following command to run `yarn add react@17 react-dom@17`... just replace `yarn` with `npm` and run `npm add react@17 react-dom@17` instead.
 
