--- a/packages/tools/docusaurus/docs/integration/storybook/token.mdx
+++ b/packages/tools/docusaurus/docs/integration/storybook/token.mdx
@@ -8,7 +8,7 @@ sidebar_position: 2
 
 To display your **Design Token** set in **Storybook** we use and recommend the [`storybook-design-token`](https://github.com/UX-and-I/storybook-design-token) addon. We also include a format for **Style Dictionary**, which outputs your **Design Token** set into a specific **CSS Custom Properties** format, annotated with the token presenters as needed by `storybook-design-token`.
 
-For an example on how this needs to be configured, have a look at the chapter ["3. Configure Storybook"](../../guides/create/storybook.mdx#design-token-integration) of our ["Create your Design System"](../../guides/create/index.md) guide.
+For an example on how this needs to be configured, have a look at the chapter ["3. Configure Storybook"](../../guides/create/storybook.mdx#design-token-integration) of our ["Create your Design System"](../../guides/create/index.mdx) guide.
 
 We also provide ready-to-use docs pages for **Storybook**, using the `DesignTokenDocBlock` by `storybook-design-token`, mapped to our semantic **Design Token** categories and values.
 
