--- a/packages/tools/docusaurus/docs/intro/index.mdx
+++ b/packages/tools/docusaurus/docs/intro/index.mdx
@@ -153,7 +153,7 @@ Use our auto-generated GraphQL APIs (based on your component API), including ful
 
 The **kickstartDS** CLI, or Command Line Interface, is a tool to quickly scaffold **kickstartDS** components, generate and convert Design Token and provides a number of helpful commands to **kickstartDS** developers. In addition to installing and updating **kickstartDS** versions, you can generate your initial, expansive & semantic Token set from a reduced, branding-orientend JSON input, or convert your Style Dictionary-based Token set into different output formats... for example the CSS Properties used and referenced in component Token.
 
-[Learn more](cli/index.md) about our CLI.
+[Learn more](cli.md) about our CLI.
 
 ## Figma
 
@@ -170,7 +170,7 @@ The template includes all our Token categories (colors, spacings, typography, bo
 
 You can just copy that file and enter your own Design Token (as defined in your Style Dictionary) to have a Figma file to hand around to your designers, enabling them to use the same, semantic structure underlying your real components and interfaces. It also serves as a great illustration of your Design Token.
 
-Learn more about our [token structure](../foundations/token/index.md), and how to leverage it for yourself.
+Learn more about our [token structure](../foundations/token/index.mdx), and how to leverage it for yourself.
 
 We're currently working on an automatic sync option native to **kickstartDS**, which should work in both directions (Figma -> Style Dictionary, Style Dictionary -> Figma) and thus enable true synchronization in shared workflows.
 
